[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "migas"
description = "A Python package to communicate with a migas server."
readme = "README.md"
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Bug Tracking",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "ci-info",
]
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/nipreps/migas-py/issues"
"Source Code" = "https://github.com/nipreps/migas-py"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
test = [
    "requests",
    "pytest",
    "looseversion",
]

#
# Hatch configurations
#

[tool.hatch.build]
exclude = ["tests"]

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["migas"]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.hatch.build.hooks.vcs]
version-file = "migas/_version.py"
template = '''
# file generated by setuptools_scm
# don't change, don't track in version control
__version__ = version = {version!r}
__version_tuple__ = version_tuple = {version_tuple!r}
'''

#
# Developer tool configurations
#

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
markers = [
    "non_idempotent: test cannot be run more than once without resetting db",
]
