[metadata]
url = https://github.com/mgxd/etclient
description = eTelemetry Python client
license = Apache License, 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
provides =
    etelemetry
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
install_requires =
    ci-info >= 0.2
    typing_extensions; python_version<'3.8'

[options.extras_require]
test =
    pytest

[flake8]
max-line-length = 99

[versioneer]
VCS = git
style = pep440
versionfile_source = etelemetry/_version.py
versionfile_build = etelemetry/_version.py
tag_prefix =
parentdir_prefix =
